--- a/connect-4/index.html
+++ b/connect-4/index.html
@@ -4,10 +4,17 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Connect4</title>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <div class="size">
+      <div class="player">
+        <div class="legs"></div>
+        <div class="back"></div>
+        <div class="glass"></div>
+      </div>
+    </div>
+    <script type="module" src="/src/common/main.jsx"></script>
   </body>
 </html>
