--- a/connect-4/index.html
+++ b/connect-4/index.html
@@ -8,13 +8,27 @@
   </head>
   <body>
     <div id="root"></div>
-    <div class="size">
-      <div class="player">
-        <div class="legs"></div>
-        <div class="back"></div>
-        <div class="glass"></div>
+      <div class="size" id="mono1">
+        <div class="player">
+          <div class="legs"></div>
+          <div class="back"></div>
+          <div class="glass"></div>
+        </div>
       </div>
-    </div>
+      <div class="size" id="mono2">
+        <div class="player">
+          <div class="legs"></div>
+          <div class="back"></div>
+          <div class="glass"></div>
+        </div>
+      </div>
+      <div class="size" id="mono3">
+        <div class="player">
+          <div class="legs"></div>
+          <div class="back"></div>
+          <div class="glass"></div>
+        </div>
+      </div>
     <script type="module" src="/src/common/main.jsx"></script>
   </body>
 </html>
