--- a/connect-4/index.html
+++ b/connect-4/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image" href="/among-us.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Connect4</title>
   </head>
@@ -29,6 +29,9 @@
           <div class="glass"></div>
         </div>
       </div>
+      <audio id="audio" loop autoplay> 
+        <source src="/spaceship.mp3" type="audio/mpeg">
+      </audio>
     <script type="module" src="/src/common/main.jsx"></script>
   </body>
 </html>
