--- a/connect-4/index.html
+++ b/connect-4/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image" href="/among-us.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Connect4</title>
+    <title>ConnectUS</title>
   </head>
   <body>
     <div id="root"></div>
